# DlmsSPODES-project

./: .gitignore  README.md  config.toml  pyproject.toml  setup.cfg  setup.py
src/DLMS_SPODES/: ITE_exceptions.py  __init__.py  client.py  config.ini  configEN.ini  config_parser.py  configure.py  constants.py  cosem_pdu.py  enums.py  exceptions.py  firmwares.py  pdu_enums.py  relation_to_OBIS.py  settings.py  version.py
src/DLMS_SPODES/cosem_interface_classes/: __class_init__.py  __init__.py  activity_calendar.py  arbitrator.py  attr_indexes.py  class_id.py  client_setup.py  clock.py  collection.py  cosem_interface_class.py  data.py  disconnect_control.py  events.py  extended_register.py  gprs_modem_setup.py  gsm_diagnostic.py  iec_hdlc_setup.py  iec_local_port_setup.py  image_transfer.py  ipv4_setup.py  limiter.py  ln_pattern.py  obis.py  overview.py  profile_generic.py  register.py  register_monitor.py  reports.py  schedule.py  script_table.py  single_action_schedule.py  special_days_table.py  tcp_udp_setup.py
src/DLMS_SPODES/hdlc/: control_field.py  snrm.py  (+3 more)
test/: 09054d324d5f33_0906312e342e3130.typ  b'101'_4d324d5f31_0.0.39.typ  b'101'_4d324d5f31_0.0.48.typ  b'101'_4d324d5f31_0.0.49.typ  b'KPZ'_4d324d5f33_1.5.7.typ  config.ini  config.toml  test.typ  test.xml  test_ActivityCalendar.py  test_AssociationLN.py  test_COSEMInterfaceClass.py  test_Data.py  test_DemandRegister.py  test_DisconnectControl.py  test_DisplayReadoutProfile.py  test_GSMDiagnostic.py  test_ImageTransfer.py  test_Limiter.py  test_NTPSetup.py  test_ProfileGeneric.py  test_Register.py  test_RegisterActivation.py  test_SNRM.py  test_ScalerUnitType.py  test_Schedule.py  test_Structures.py  test_benchmark_create_obj.py  test_bytebuffer.py  test_cdt.py  test_collection.py  test_config.py  test_configure.py  test_cosem_pdu.py  test_electric_obj.py  test_enums.py  test_hdlc.py  test_overview.py  test_report.py  test_save_type.typ  (+6 more)
(+248 files in other folders)
