[build-system]
requires = [
    "setuptools",
    "setuptools-scm"]
#build-backend = "setuptools.build_meta"

#[tool.setuptools]
#package-dir = {"" = "src"}

[project]
name = "DLMS_SPODES"
version = "0.34.17"
authors = [
    {name="Serj Kotilevski", email="youserj@outlook.com"}
]
description="dlms-spodes"
readme = "README.md"
requires-python = ">=3.11"
keywords=["dlms"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]