[build-system]
requires = [
    "setuptools",
    "setuptools-scm"]
#build-backend = "setuptools.build_meta"

#[tool.setuptools]
#package-dir = {"" = "src"}

[project]
name = "DLMS_SPODES"
version = "0.69.2"
authors = [
    {name="Serj Kotilevski", email="youserj@outlook.com"}
]
dependencies = [
    "pycryptodomex>=3.15"
]
description="dlms-spodes"
readme = "README.md"
requires-python = ">=3.11"
keywords=["dlms"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
